--- a/package.json
+++ b/package.json
@@ -13,11 +13,21 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
+    "@emotion/core": "^10.0.17",
     "gatsby": "^2.15.21",
+    "gatsby-plugin-emotion": "^4.1.7",
+    "gatsby-plugin-typescript": "^2.1.9",
+    "gatsby-plugin-typography": "^2.3.8",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "typography-theme-kirkham": "^0.16.19"
   },
   "devDependencies": {
+    "@types/node": "^12.7.5",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "prettier": "^1.18.2"
   },
   "repository": {
