--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
-    "@emotion/core": "^10.0.17",
     "gatsby": "^2.15.21",
     "gatsby-plugin-emotion": "^4.1.7",
     "gatsby-plugin-typescript": "^2.1.9",
@@ -25,6 +24,8 @@
     "typography-theme-kirkham": "^0.16.19"
   },
   "devDependencies": {
+    "@emotion/core": "^10.0.17",
+    "@emotion/styled": "^10.0.17",
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
