--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "extend-random": "^2.2.0",
     "gatsby": "^2.15.21",
     "gatsby-plugin-emotion": "^4.1.7",
     "gatsby-plugin-typescript": "^2.1.9",
