--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-typography": "^0.16.19",
-    "typography": "^0.16.19",
-    "typography-theme-kirkham": "^0.16.19"
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "@emotion/core": "^10.0.17",
@@ -34,6 +33,7 @@
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "gatsby-plugin-routes": "^1.0.0",
     "prettier": "^1.18.2"
   },
   "repository": {
