--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "gatsby-plugin-routes": "^1.0.0",
+    "gatsby-source-filesystem": "^2.1.26",
     "prettier": "^1.18.2"
   },
   "repository": {
