--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "gatsby-plugin-routes": "^1.0.0",
+    "gatsby-remark-prismjs": "^3.3.17",
     "gatsby-source-filesystem": "^2.1.26",
     "gatsby-transformer-remark": "^2.6.26",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "prismjs": "^1.17.1"
   },
   "repository": {
     "type": "git",
