Add gatsby-images with plugins and write some more stuff

--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "gatsby-image": "^2.2.30",
     "gatsby-plugin-routes": "^1.0.0",
+    "gatsby-plugin-sharp": "^2.2.36",
     "gatsby-remark-prismjs": "^3.3.17",
-    "gatsby-source-filesystem": "^2.1.26",
+    "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-remark": "^2.6.26",
+    "gatsby-transformer-sharp": "^2.3.2",
     "prettier": "^1.18.2",
     "prismjs": "^1.17.1"
   },
