--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-typography": "^0.16.19",
+    "sharp": "^0.23.4",
     "typography": "^0.16.19"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-feed": "^2.3.26",
     "gatsby-plugin-routes": "^1.0.0",
     "gatsby-plugin-sharp": "^2.2.36",
     "gatsby-remark-prismjs": "^3.3.17",
