--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
     "serve": "gatsby serve",
+    "start": "npm run develop",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
@@ -41,6 +42,7 @@
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-remark": "^2.6.26",
     "gatsby-transformer-sharp": "^2.3.2",
+    "gh-pages": "^2.2.0",
     "prettier": "^1.18.2",
     "prismjs": "^1.17.1"
   },
