--- a/package.json
+++ b/package.json
@@ -10,41 +10,41 @@
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "serve": "gatsby serve",
-    "start": "npm run develop",
+    "start": "yarn develop",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "gatsby": "^2.15.21",
-    "gatsby-plugin-emotion": "^4.1.7",
-    "gatsby-plugin-typescript": "^2.1.9",
-    "gatsby-plugin-typography": "^2.3.8",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "gatsby": "^2.24.85",
+    "gatsby-plugin-emotion": "^4.3.14",
+    "gatsby-plugin-typescript": "^2.4.24",
+    "gatsby-plugin-typography": "^2.5.13",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-typography": "^0.16.19",
-    "sharp": "^0.23.4",
+    "sharp": "^0.26.2",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@emotion/core": "^10.0.17",
-    "@emotion/styled": "^10.0.17",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@types/node": "^12.7.5",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "gatsby-image": "^2.2.30",
-    "gatsby-plugin-feed": "^2.3.26",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@types/node": "^14.14.2",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-feed": "^2.5.19",
     "gatsby-plugin-routes": "^1.0.0",
-    "gatsby-plugin-sharp": "^2.2.36",
-    "gatsby-remark-prismjs": "^3.3.17",
-    "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-transformer-remark": "^2.6.26",
-    "gatsby-transformer-sharp": "^2.3.2",
-    "gh-pages": "^2.2.0",
-    "prettier": "^1.18.2",
-    "prismjs": "^1.17.1"
+    "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-remark-prismjs": "^3.5.16",
+    "gatsby-source-filesystem": "^2.3.35",
+    "gatsby-transformer-remark": "^2.8.46",
+    "gatsby-transformer-sharp": "^2.5.19",
+    "gh-pages": "^3.1.0",
+    "prettier": "^2.1.2",
+    "prismjs": "^1.22.0"
   },
   "repository": {
     "type": "git",
