--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "serve": "gatsby serve",
     "start": "yarn develop",
+    "lint": "eslint .",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "react-dom": "^17.0.1",
     "react-typography": "^0.16.19",
     "sharp": "^0.26.2",
+    "typescript": "^4.1.2",
     "typography": "^0.16.19"
   },
   "devDependencies": {
@@ -34,6 +36,16 @@
     "@types/node": "^14.14.2",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/parser": "^4.8.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.14.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-no-only-tests": "^2.4.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-feed": "^2.5.19",
     "gatsby-plugin-routes": "^1.0.0",
