--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "gatsby": "^2.24.85",
     "gatsby-plugin-emotion": "^4.3.14",
+    "gatsby-plugin-react-helmet": "^3.6.0",
     "gatsby-plugin-typescript": "^2.4.24",
     "gatsby-plugin-typography": "^2.5.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
     "sharp": "^0.26.2",
     "typescript": "^4.1.2",
