--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^14.14.2",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.8.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.14.0",
