--- a/.github/workflows/deploy-from-dispatch.yml
+++ b/.github/workflows/deploy-from-dispatch.yml
@@ -7,7 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ngduc/vercel-deploy-action@v19.0.12
+      - name: Clean build
+        run: yarn build
+      - uses: amondnet/vercel-action@v19
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }}
         vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}
