--- a/.github/workflows/deploy-from-dispatch.yml
+++ b/.github/workflows/deploy-from-dispatch.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
       - name: Clean build
         run: yarn build
       - name: Vercel deploy
