--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reach/router": "^1.3.4",
     "framer-motion": "^3.6.2",
     "gatsby": "^2.32.4",
+    "gatsby-cli": "^3.0.0",
     "gatsby-plugin-emotion": "^5.4.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-typescript": "^2.12.0",
