--- a/.github/workflows/deploy-from-dispatch.yml
+++ b/.github/workflows/deploy-from-dispatch.yml
@@ -18,3 +18,5 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}}
           working-directory: ./public
+          vercel-args: '--prod '
+          alias-domains: osediaz.com
