--- a/.github/workflows/deploy-from-dispatch.yml
+++ b/.github/workflows/deploy-from-dispatch.yml
@@ -19,4 +19,4 @@ jobs:
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}}
           working-directory: ./public
           vercel-args: '--prod '
-          alias-domains: osediaz.com
+#          alias-domains: osediaz.com
